tests/NormalTests/paczka1/small_fuzzy/69892493.err
Error in line 10: bKUaONl87kz A246 22,63
